# neb-helper

./: .gitignore  README.md  pyproject.toml
docs/: analyze_zh.md  quickstart_zh.md  tsguess_zh.md  user_guide_zh.md
examples/: README.md
examples/analyze/: analyze_result_en.yaml  analyze_result_zh.yaml
examples/dimer/: dimer_guess.yaml  dimer_guess_en.yaml  dimer_guess_zh.yaml
examples/make/: README.md  nebmake_v2_example.yaml  nebmake_v2_example_en.yaml
examples/python_api/: analyze_result.py  dimer_guess.py  make_from_config.py  slice_band.py  ts_guess.py
examples/tsguess/: sc_dmf_c2h4.yaml  sc_dmf_c2h4_en.yaml  sc_dmf_c2h4_zh.yaml
src/neb_helper/: __init__.py  api.py  cli.py
src/neb_helper/common/: __init__.py  cp2k.py  geometry.py
src/neb_helper/make/: __init__.py  atom_reorder.py  atom_selection.py  batch_evaluators.py  batched_neb.py  cli.py  config.py  dimer_vector.py  neb_relax.py  pbc.py  progress.py  relax.py  specs.py  validate.py  workflow.py
src/neb_helper/make/builders/: __init__.py  cartesian.py  hybrid.py  torsion.py  waypoint.py
src/neb_helper/make/calculators/: __init__.py  ase_builtin.py  base.py  dp.py  mace.py
src/neb_helper/make/writers/: __init__.py  cp2k.py
src/neb_helper/result/: __init__.py  analyze.py  band_io.py  dimer_guess.py  slice_band.py  ts_guess.py
tests/: test_analyze_config.py  test_band_io.py  test_tsguess_workflows.py
