[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neb-helper"
version = "0.1.0"
description = "Tools for building, analyzing, and deriving NEB workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "neb-helper contributors" }
]
dependencies = [
  "ase>=3.22",
  "numpy>=1.23",
  "matplotlib>=3.5",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
ml = [
  "mace-torch",
]
dev = [
  "pytest>=7",
]

[project.scripts]
neb-helper = "neb_helper.cli:main"
nebmake-v2 = "neb_helper.make.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
